Version 7.5.0
Fixed a long standing and very very annoying problem, browse mode is now automatically disabled!
Missions system enabled, with a couple of missions that you'll discover as you play. There are currently 7 missions which give you mission credits as your mission level increases. Mission credits do nothing right now.
The stats system is taking shape. You can now see your stats, which are things like total played time, etc.
There is now a settings menu at the bottom, to clean up the huge main menu of seamingly endless options which includes things like pack directory, language, the new keyboard layout option, etc.
Fixed a problem where tutorial sounds would not play.
In the learn pack menu you can now press shift to hear the countersound.
You can now use an alternative keyboard layout which uses e, d, r, f, and optionally i, k, j, l as alternative keys for beatstar. This has been a long time coming and I am ashamed not to have made it sooner. I made it this way instead of a remapping option so that players don't use in game keys as action keys, etc. Hopefully, it's enough.
Fixed a bug inin game  save, if the option was not enabled, the save would fail but you wouldn't be able to perform any more keyboard actions, resulting in... Well.

Version 6.0.0
Fixed a misleading message that said if you want to change the ingame language you must delete your save. This is no longer true and can be done in the main menu.
fixed a cosmetic bug in ready set go, where time would display as 2 seconds instead of 3. Bugger! this did not affect the game, though.
Fixed a bug where the save function (s during a game) would still allow you to  fail once more and waste a possible safeguard when pressing enter to get rid of the "saved!" message.
Added an audio locator which plays before each level starts, to give you an idea of what the ideal beat rhythm is. Such is the power of event driven code instead of traditional timers.