@@ -19,7 +19,7 @@ charset="utf-8"/>
 </head>
 <body id="body" role="application">
 <div role="application">
-<input type="button" role="application" id="app">Game<input>
+<button role="application" id="app">Game</button>
 Welcome!<p>
 this is the game window. Please disable your screen reader's virtual cursor (or browse cursor) so you can use the arrow keys.<br>
 On a mac, please disable voice over for best performance.
